# smiffer-plugins

./: .gitignore  LICENSE  README.md
chimerax_volgrid_usage/: MANIFEST.in  README.md  bundle_info.xml  install.sh  pyproject.toml  setup.py  setup.py.in  uninstall.sh
chimerax_volgrid_usage/ChimeraX_SmifferTool.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
chimerax_volgrid_usage/src/: tool.py
chimerax_volgrid_usage/src/ChimeraX_SmifferTool.egg-info/: PKG-INFO
chimerax_volgrid_usage/src/ChimeraX_VolgridUsage.egg-info/: PKG-INFO
demo_spocker/: 0_prepare_input.sh  1_gen_smifs.sh  1_run_pipeline.py  README.md  Script1_Pipeline1_Slope_Derived_Fixed_Iso_Values_for_Hotspot.py  Script2_Pipeline1_Detection_of_Binding_Site_Hotspots.py  Script3_Pipeline1_Making_Pocket_Volume_Using_Hotspots.py  Script4_Pipeline2_Hydrogen_Bond_Pocket_Hotspots_Using_HBA_HBD_ELE_Fields.py  Script6_Trimming_APBS_for_Scoring_Unique_Pockets.py  Script7_Trimming_Hydrophobic_for_Scoring_Unique_Pockets.py  _legacy_prepare_inputs.py  environment.yml  run.sh  run_pipeline_legacy.sh
demo_spocker/legacy/: Pipeline1_Fields_Generation.sh  Pipeline2_Fields_Generation.sh  README.md  Script1_Pipeline1_Slope_Derived_Fixed_Iso_Values_for_Hotspot.py  Script2_Pipeline1_Detection_of_Binding_Site_Hotspots.py  Script3_Pipeline1_Making_Pocket_Volume_Using_Hotspots.py  Script4_Pipeline2_Hydrogen_Bond_Pocket_Hotspots_Using_HBA_HBD_ELE_Fields.py  Script5_Pipeline2_Making_Hydrogen_Bond_Pocket_Volume.py  Script6_Trimming_APBS_for_Scoring_Unique_Pockets.py  Script7_Trimming_Hydrophobic_for_Scoring_Unique_Pockets.py  Script8_Making_Unique_Pockets_Using_All_Previous_Pockets.py  indices_rna_hb_available_modified.py
demo_spocker/pipeline/: __init__.py  config.py  fields.py  hbond_pockets.py  hotspots.py  isovalues.py  mrc_io.py  refine.py  residues.py  run.py  structure.py  unique_pockets.py
pymol_volgrid/: __init__.py  install.sh  pymol_smiffer_plugin.py  pymol_smiffer_setup.py  setup.py  smiffer.pym  uninstall.sh
pymol_volgrid/.claude/: settings.local.json
vmd_volgrid/: bundle_info.xml  install.sh  install_plugin.tcl  io.mc  pkgIndex.tcl  uninstall.sh  vmd_smiffer.tcl
vmd_volgrid/src/: tool.py
vmd_volgrid/volgrids-main/: &1
vmd_volgrid/volgrids-main/volgrids/: config.ini
