[build-system]
requires = ["ChimeraX-BundleBuilder>=1.0"]
build-backend = "chimerax.bundle_builder.cx_pep517"

[project]
name = "ChimeraX-SmifferTool"
version = "1.0"
authors = [
    {name = "Louis Meuret", email = "your.email@example.com"},
]
description = "MIF creation and visualisation tool for ChimeraX"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dynamic = ["classifiers"]
keywords = ["ChimeraX", "plugin", "orientation", "visualization"]
urls = {Homepage = "https://example.com"}

[chimerax]
pure = true
min-session-ver = 1
max-session-ver = 1
custom-init = false
categories = ["General"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Visualization"
]

[chimerax.tool."SmifferTool"]
category = "General"
description = "MIF creation and visualisation tool for ChimeraX"
