[build-system]
requires = ["ChimeraX-BundleBuilder>=1.0"]
build-backend = "chimerax.bundle_builder.cx_pep517"

[project]
name = "ChimeraX-SmifferTool"
version = "1.0"
authors = [
    {name = "Louis Meuret", email = "your.email@example.com"},
]
description = "MIF creation and visualisation tool for ChimeraX"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "numpy>=2.3.0",
    "scipy>=1.15.0",
    "matplotlib>=3.10.0",
    "MDAnalysis>=2.9.0",
    "h5py>=3.14.0",
    "GridDataFormats>=1.0.2",
    "tqdm>=4.67.0"
]
dynamic = ["classifiers", "entry-points"]
keywords = ["ChimeraX", "plugin", "orientation", "visualization"]
urls = {Homepage = "https://example.com"}

[chimerax]
pure = true
min-session-ver = 1
max-session-ver = 1
custom-init = false
categories = ["General"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Visualization"
]

[chimerax.tool."SmifferTool"]
category = "General"
description = "MIF creation and visualisation tool for ChimeraX"
